# conjure-sdk

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: adapter_example.py  usb_holder.py  validate_framework.py
src/conjure/: __init__.py  builder.py  client.py  exceptions.py  materials.py
src/conjure/adapter/: __init__.py  base_adapter.py  base_engine.py  base_server_client.py  config.py  result.py  runner.py
src/conjure/protocol/: __init__.py  capabilities.py  commands.py  registration.py
src/conjure/transport/: __init__.py  socket_client.py  socket_server.py
tests/: conftest.py  test_adapter.py  test_builder.py  test_live_server.py
