[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "conjure-sdk"
version = "0.1.0"
description = "Official Python SDK for the Conjure CAD API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "Lautrek", email = "support@lautrek.com" }
]
keywords = ["cad", "api", "sdk", "3d", "modeling", "conjure"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://lautrek.com/conjure"
Documentation = "https://lautrek.com/conjure/docs"
Repository = "https://github.com/Lautrek/conjure-sdk"

[tool.hatch.build.targets.wheel]
packages = ["src/conjure"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "live: tests that require a live server connection",
]

[tool.ruff]
target-version = "py38"
line-length = 120

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
]
